locations page, borders

--- a/casts.html
+++ b/casts.html
@@ -29,8 +29,8 @@
             <img src="images/badge.jpg" alt="logo" class="logo"/>
             <ul class="nav-list">
                 <li class="list-item"> <a href="index.html">Home</a></li>
-                <li class="list-item"> <a href="index.html">Shows</a></li>
-                <li class="list-item"> <a href="index.html">Locations</a></li>
+                <li class="list-item"> <a href="casts.html">Shows</a></li>
+                <li class="list-item"> <a href="locations.html">Locations</a></li>
             </ul>
         </nav>
     </header>
@@ -64,6 +64,9 @@
         </div>
     </div>
 <!-------------------End of Original Series-------------->
+<!--<div class="parallax1"></div>-->
+
+
 <!--------------Beginning of The Next Generation--------->
     <div class="series-big">
         <div>
