--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <img src="images/badge.jpg" alt="logo" class="logo"/>
             <ul class="nav-list">
                 <li class="list-item"> <a href="index.html">Home</a></li>
-                <li class="list-item"> <a href="index.html">Shows</a></li>
-                <li class="list-item"> <a href="index.html">Locations</a></li>
+                <li class="list-item"> <a href="casts.html">Shows</a></li>
+                <li class="list-item"> <a href="locations.html">Locations</a></li>
             </ul>
         </nav>
     </header>
