--- a/casts.html
+++ b/casts.html
@@ -8,7 +8,8 @@
     <meta name="author" content="Ed Warkentin">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+    <link rel="shortcut icon" href="images/favicon.ico" type="images/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="images/x-icon">
     <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">-->
     <!--<link rel="icon" type="image/icon" href="favicon/favicon.ico">-->
 
@@ -28,7 +29,7 @@
         <nav class="nav-bar">
             <img src="images/badge.jpg" alt="logo" class="logo"/>
             <ul class="nav-list">
-                <li class="list-item"> <a href="index.html">Home</a></li>
+                <li class="list-item"> <a href="index.html">Captains</a></li>
                 <li class="list-item"> <a href="casts.html">Shows</a></li>
                 <li class="list-item"> <a href="locations.html">Locations</a></li>
             </ul>
