--- a/locations.html
+++ b/locations.html
@@ -8,7 +8,8 @@
     <meta name="author" content="Ed Warkentin">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+    <link rel="shortcut icon" href="images/favicon.ico" type="images/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="images/x-icon">
     <title>Locations in Star Trek</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css"/>
 </head>
@@ -18,7 +19,7 @@
         <nav class="nav-bar">
             <img src="images/badge.jpg" alt="logo" class="logo"/>
             <ul class="nav-list">
-                <li class="list-item"> <a href="index.html">Home</a></li>
+                <li class="list-item"> <a href="index.html">Captains</a></li>
                 <li class="list-item"> <a href="casts.html">Shows</a></li>
                 <li class="list-item"> <a href="locations.html">Locations</a></li>
             </ul>
