--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="images/x-icon">
     <link rel="icon" href="images/favicon.ico" type="images/x-icon">   
     <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">-->
-    <!--<link rel="icon" type="image/icon" href="favicon/favicon.ico">-->
-
     <!--<link href="https://fonts.googleapis.com/css?family=Rambla" rel="stylesheet">-->
     
     <!--<link rel="manifest" href="/manifest.json">-->
@@ -60,9 +58,11 @@
             <button>Submit</button>
             <input type="text" name="Email"/>
         </div>
-        <div class="footer-col social-media">
+          
+          <div class="footer-col social-media">
             <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a>
             <a href="https://twitter.com/senorw" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a>
+            <a href="https://www.startrek.com/" target="_blank"><i class="fas fa-hand-spock fa-3x"></i></a>
         </div>
         <div class="footer-col copyright">
             <p>&copy;2019 Ed Warkentin. All Rights Reserved.<br> Live long and prosper.</p>
