--- a/casts.html
+++ b/casts.html
@@ -54,7 +54,7 @@
 <b>Walter Koenig</b>: Pavel Chekov <br>
 <b>George Takei</b>: Sulu
 </p>
-                <p class="col series-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At quisquam necessitatibus facere, velit error provident eum beatae ipsa saepe voluptatum asperiores maiores aliquam corporis quidem vel aspernatur quis delectus repudiandae voluptatibus adipisci magni officia ullam. Eos iste libero magnam voluptatibus minus aut, saepe nostrum illum, recusandae temporibus laborum officiis ipsum.</p>
+                <p class="col series-desc">This is the series that started it all!<br> Very underrated when it was originally released, but had a tremendous increase in popularity years later. Six spinoffs later, and several movies, Star Trek remains one of the most popular entertainment franchises in history.</p>
                 <audio class="col col-audio" controls src="media/tos-llap.mp3"></audio>
                 </div>
         </div>
@@ -81,7 +81,7 @@
 <b>Marina Sirtis</b>: Deanna Troi <br> 
 <b>Wil Wheaton</b>: Wesley Crusher
 </p>
-            <p class="col series-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At quisquam necessitatibus facere, velit error provident eum beatae ipsa saepe voluptatum asperiores maiores aliquam corporis quidem vel aspernatur quis delectus repudiandae voluptatibus adipisci magni officia ullam. Eos iste libero magnam voluptatibus minus aut, saepe nostrum illum, recusandae temporibus laborum officiis ipsum.
+            <p class="col series-desc">Arguably the best Star Trek series of them all. <br>The best acting, the most seasons, the best writing. Those who grew up in the '80's and '90's remember this show fondly.
                 </p>
                 <audio class="col col-audio" controls src="media/tng-borg.mp3"></audio>
         </div>
@@ -113,7 +113,7 @@
 <b>Nana Visitor</b>: Kira Nerys<br>
 
 </p>
-            <p class="col series-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At quisquam necessitatibus facere, velit error provident eum beatae ipsa saepe voluptatum asperiores maiores aliquam corporis quidem vel aspernatur quis delectus repudiandae voluptatibus adipisci magni officia ullam. Eos iste libero magnam voluptatibus minus aut, saepe nostrum illum, recusandae temporibus laborum officiis ipsum.
+            <p class="col series-desc">The crew of the space station known as Deep Space Nine didn't travel where no one has gone before. At least not in a ship, like the other series. The first stable wormhole in existance was discovered nearby, though, which brought all kinds of new situations, including enemies from the Gamma Quadrant. Much of this series dealt with this conflict.
                 </p>
                 <audio class="col col-audio" controls src="media/ds9-siskostablewormhole.mp3"></audio>
         </div>
@@ -144,7 +144,7 @@
 <b>Jeri Ryan</b>: Seven of Nine<br>
 <b>Garrett Wang</b>: Harry Kim<br>
 </p>
-                <p class="col series-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At quisquam necessitatibus facere, velit error provident eum beatae ipsa saepe voluptatum asperiores maiores aliquam corporis quidem vel aspernatur quis delectus repudiandae voluptatibus adipisci magni officia ullam. Eos iste libero magnam voluptatibus minus aut, saepe nostrum illum, recusandae temporibus laborum officiis ipsum.
+                <p class="col series-desc">Rather than traveling away from Earth and its neighbors in space, this unfortunate crew spent its journey trying to get back home, after being stranded on the far side of the Milky Way galaxy in its first episode. This allowed them to discover lots of species and anomalies that none of the other series had. This was the first series with a female captain. 
                 </p>
                 <audio class="col col-audio" controls src="media/voy-caplog.mp3"></audio>
             </div>
@@ -165,9 +165,9 @@
             <div class="threecol">
                 <p class="col cast-text"><b>Scott Bakula</b>: Captain Jonathan Archer<br> <b>Jolene Blalock</b>: T'Pol<br><b>John Billingsley</b>: Dr. Phlox<br><b>Dominic Keating</b>: Malcolm Reed<br><b>Anthony Montgomery</b>: Travis Mayweather<br><b>Linda Park</b>: Hoshi Sato<br><b>Connor Trinneer</b>: Charles "Trip" Tucker III<br>
                 </p>
-                <p class="col series-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At quisquam necessitatibus facere, velit error provident eum beatae ipsa saepe voluptatum asperiores maiores aliquam corporis quidem vel aspernatur quis delectus repudiandae voluptatibus adipisci magni officia ullam. Eos iste libero magnam voluptatibus minus aut, saepe nostrum illum, recusandae temporibus laborum officiis ipsum.
+                <p class="col series-desc">Set in the mid-22nd century, over 100 years before James T. Kirk helmed the famous vessel, this installment of the "Star Trek" franchise is set on the Enterprise NX-01 -- the first Earth starship capable of warp 5 -- and explores the history of the interplanetary upheaval that eventually leads to the formation of the Federation.
                 </p>
-                <audio class="col col-audio" controls src="media/voy-caplog.mp3"></audio>
+                <audio class="col col-audio" controls src="media/entdoor.mp3"></audio>
                 </div>
         </div>
     </section>
@@ -196,7 +196,8 @@
 <b>Shazad Latif</b>: Ash Tyler<br>
 <b>Anson Mount</b>: Christopher Pike<br>
                 </p>
-                <p class="col series-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At quisquam necessitatibus facere, velit error provident eum beatae ipsa saepe voluptatum asperiores maiores aliquam corporis quidem vel aspernatur quis delectus repudiandae voluptatibus adipisci magni officia ullam. Eos iste libero magnam voluptatibus minus aut, saepe nostrum illum, recusandae temporibus laborum officiis ipsum.
+                <p class="col series-desc">Begins roughly a decade before Captain Kirk's five-year mission -- as portrayed in the original "Star Trek" from the 1960s -- and a century before the events of "Star Trek: Enterprise.".
+                    
                 </p>
                 <audio class="col col-audio" controls src="media/voy-caplog.mp3"></audio>
                 </div>
