--- a/locations.html
+++ b/locations.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
 <!-----------End of Nav Bar--------->
-    <!--<div class= "stars-background"></div>-->
+    <div class= "stars-background"></div>
 
     <section class= "mapform-container">
         <div class= "map-form">
