Ready to present

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="shortcut icon" href="images/favicon.ico" type="images/x-icon">
     <link rel="icon" href="images/favicon.ico" type="images/x-icon">   
-    <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">-->
-    <!--<link href="https://fonts.googleapis.com/css?family=Rambla" rel="stylesheet">-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Rambla" rel="stylesheet">
     
     <!--<link rel="manifest" href="/manifest.json">-->
     <!--<meta name="msapplication-TileColor" content="#ffffff">-->
@@ -37,7 +37,7 @@
     </header>
 <!-----------End of Nav Bar--------->
 
-    <main class="hero">
+    <main class="hero pagetop">
         <div class="herobox">
             <h1>The Captains of Star Trek</h1>
         </div>
