--- a/locations.html
+++ b/locations.html
@@ -6,11 +6,12 @@
     <meta name="description" content="Star Trek">
     <meta name="keywords" content="star trek enterprise voyager deep space nine discovery">
     <meta name="author" content="Ed Warkentin">
-
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="images/favicon.ico" type="images/x-icon">
     <link rel="icon" href="images/favicon.ico" type="images/x-icon">
-    <title>Locations in Star Trek</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">-->
+    <link href="https://fonts.googleapis.com/css?family=Rambla" rel="stylesheet">
+    <title>Star Trek mini-Fan Site</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css"/>
 </head>
 <body>
@@ -36,13 +37,12 @@
 <!--Wufoo form-->
         <div class= "map-form">
             <h1 class= "locations-title favorites">Your Favorites</h1>
-            <iframe height="448" allowTransparency="true" frameborder="0" scrolling="no" style="width:50%;border:5px solid blue" src="https://senorw.wufoo.com/embed/qrsq8ph1pysl8o/"> <a href="https://senorw.wufoo.com/forms/qrsq8ph1pysl8o/"> Fill out my Wufoo form! </a>
-            </iframe>
+            <!-- <iframe height="448" allowTransparency="true" frameborder="0" scrolling="no" style="width:50%;border:5px solid blue" src="https://senorw.wufoo.com/embed/qrsq8ph1pysl8o/"> <a href="https://senorw.wufoo.com/forms/qrsq8ph1pysl8o/"> Fill out my Wufoo form! </a>
+            </iframe> -->
 
 
 <!--Google Form-->
-            <!--<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc9XWd_BLDMZ7XJxdZt8zZvEoTHe9rz0rBWE-BinYgWhVTqHg/viewform?embedded=true" width="640" height="845" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
-
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc9XWd_BLDMZ7XJxdZt8zZvEoTHe9rz0rBWE-BinYgWhVTqHg/viewform?embedded=true" width="640" height="448" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             <!--Google Sheet w/ answers-->
         </div>
     </section>
@@ -55,6 +55,7 @@
         <div class="footer-col social-media">
             <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a>
             <a href="https://twitter.com/senorw" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a>
+            <a href="https://www.startrek.com/" target="_blank"><i class="fas fa-hand-spock fa-3x"></i></a>
         </div>
         <div class="footer-col copyright">
             <p>&copy;2019 Ed Warkentin. All Rights Reserved.<br> Live long and prosper.</p>
