Ship flying on Captains page working

--- a/index.html
+++ b/index.html
@@ -43,15 +43,22 @@
         </div>
     </main>
     
-    <section class="all-names">
-        <div class="captain-names kirk">James T. Kirk <br> The Original Series</div>
+    <div class="all-names">
+        <div class= "captain-names kirk">James T. Kirk <br> The Original Series</div>
         <div class= "captain-names picard">Jean-Luc Picard <br> The Next Generation</div>
         <div class= "captain-names sisko">Benjamin Sisko <br> Deep Space Nine</div>
         <div class= "captain-names janeway">Kathryn Janeway <br> Voyager</div>
         <div class= "captain-names archer">Jonathan Archer <br> Enterprise</div>
         <div class= "captain-names georgiou">Philippa Georgiou <br> Discovery</div>      
         <div class= "captain-names lorca">Gabriel Lorca <br> Discovery</div>
-    </section>
+    </div>
+
+    <!-- <section class="names-ship">-->
+    <div class="sub-footer">
+        <img class="ent-d-side" src="images/ent-d-side.jpg" alt="small Enterprise flying"/>
+    </div>
+    <!-- </section> -->
+
 
     <footer class="footer">
         <div class="footer-col emailbutton">
