Flying ship on all 3 pages

--- a/casts.html
+++ b/casts.html
@@ -157,11 +157,11 @@
     </section>
     <div class= "entship ship"></div>
 
-<!----------End of ENT (real)------->
+<!----------End of ENT ------------>
 
 
 
-
+<!--------Beginning of DISC-------->
 <section class="series-large">
         <div class="series-big">
             <h1>Discovery: 2017-</h1>
@@ -187,34 +187,11 @@
     </section>
     <div class= "discship ship"></div>
 
+<!------------End of DISC------------>
 
-<!-----Beginning of DISC----->
-    <!-- <section class="series-large">
-        <div class="series-big">
-            <h1>Discovery: 2017-</h1> 
-            <div class="pic-vid">
-                <img class="castpic" src="images/disccast.jpg" alt="Discovery cast"/>
-                <iframe class="themevid" width="560" height="315" src="https://www.youtube.com/embed/ZcTvrxwP6Is" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="threecol">
-                <p class="col cast-text"><b>Sonequa Martin-Green</b>: Michael Burnham<br>
-<b>Doug Jones</b>: Saru<br>
-<b>Anthony Rapp</b>: Paul Stamets<br>
-<b>Mary Wiseman</b>: Sylvia Tilly<br>
-<b>Jason Isaacs</b>: Gabriel Lorca<br>
-<b>Wilson Cruz</b>: Hugh Culber<br>
-<b>Shazad Latif</b>: Ash Tyler<br>
-<b>Anson Mount</b>: Christopher Pike<br>
-                </p>
-                <p class="col series-desc">Begins roughly a decade before Captain Kirk's five-year mission -- as portrayed in the original "Star Trek" from the 1960s -- and a century before the events of "Star Trek: Enterprise."
-                </p>
-                <audio class="col col-audio" controls src="media/voy-caplog.mp3"></audio>
-            </div>
-    </section>
-    
-    <div class= "discship ship"></div> -->
-
-<!-----End of DISC----->
+    <div class="sub-footer">
+        <img class="ent-d-side" src="images/ent-d-side.jpg" alt="small Enterprise flying"/>
+    </div>
 
     <footer class="footer">
         <div class="footer-col emailbutton">
