--- a/locations.html
+++ b/locations.html
@@ -47,6 +47,11 @@
         </div>
     </section>
 
+<div class="sub-footer">
+    <img class="ent-d-side" src="images/ent-d-side.jpg" alt="small Enterprise flying"/>
+</div>
+    
+
     <footer class="footer">
         <div class="footer-col emailbutton">
             <button>Submit</button>
